--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:palette-v7:23.1.1'
     compile project(':sweet-alert-dialog:library')
     compile 'com.github.obiteaaron:pinyin4j-multi:1.0.0'
+    compile project(':multi-image-selector')
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
