修改联系人页面头像显示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,7 @@
         <activity
             android:name=".EditActivity"
             android:label="@string/title_activity_edit"
+            android:process=":picture"
             android:theme="@style/AppTheme"></activity>
     </application>
 
