--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
+    <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <!-- 监听电话状态权限 -->
     <uses-permission android:name="android.permission.MODIFY_PHONE_STATE" />
@@ -54,6 +55,11 @@
             android:label="@string/title_activity_edit"
             android:process=":picture"
             android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name="com.soundcloud.android.crop.CropImageActivity"
+            android:theme="@style/AppThemeCrop"/>
+
+
     </application>
 
 </manifest>
